# aoostar-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Monitor3.json  README.md  book.toml
.github/workflows/: build.yml  deploy_mdbook.yml
cfg/: monitor.json  sensor-mapping-aoostar.cfg
cfg/sensor-mapping/: sysinfo-to-aoostar-filter.cfg  sysinfo-to-aoostar.cfg
cfg/sensors/: values.txt
crates/aster-prom/: Cargo.toml  build.rs
crates/aster-prom/src/: lib.rs  main.rs  prom_client.rs
crates/aster-sysinfo/: Cargo.toml  README.md
crates/aster-sysinfo/src/: main.rs
crates/asterctl/: Cargo.toml  README.md
crates/asterctl-lcd/: Cargo.toml  README.md
crates/asterctl-lcd/src/: aoo_screen.rs  fake_serialport.rs  lib.rs
crates/asterctl/src/: cfg.rs  font.rs  format_value.rs  img.rs  lib.rs  main.rs  render.rs  sensors.rs
crates/sysinfo/: Cargo.toml  README.md
crates/sysinfo/src/: main.rs
doc/: README.md  asterctl.md  sensor_data_shell.md  sensor_data_sysinfo.md  sensor_data_txt_file.md  sensor_mode1_text.md  sensor_mode2_fan.md  sensor_mode3_progress.md  sensor_mode4_pointer.md  sensor_panels.md  shell_commands.md
docs/: README.md  SUMMARY.md  asterctl.md  installation.md  lcd_protocol.md  sensor_custom_panel.md  sensor_data_sysinfo.md  sensor_mode2_fan.md  sensor_mode3_progress.md
docs/linux/: README.md
docs/sensor/: README.md  panel.md
docs/sensor/cfg/: README.md  mode1_text.md  mode2_circular.md  mode3_progress.md  mode4_pointer.md
docs/sensor/provider/: README.md  internal_date_time.md  shell_scripts.md  sysinfo.md  text_file.md
fonts/: HarmonyOS_Sans_SC.LICENSE
linux/: README.md  aster-sysinfo.service  lcd-off.service  lcd-on.service
linux/scripts/: cpu_usage.sh  mem_usage.sh
src/: cfg.rs  display.rs  dummy_serialport.rs  font.rs  format_value.rs  img.rs  main.rs  render.rs  sensors.rs
