[package]
name = "asterctl"
version = "0.2.0"
description = "AOOSTAR WTR MAX Screen Control tool"
readme = "../../README.md"

rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
asterctl-lcd = { path = "../asterctl-lcd", version = "0.2.0" }

anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
chrono = "0.4"
image = "0.25.6"
imageproc = { version = "0.25.0", default-features = false }
ab_glyph = { version = "0.2.31", default-features = false, features = ["std"] }
log = "0.4.27"
env_logger = "0.11.8"
notify = "8.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_repr = "0.1.20"
once_cell = "1.21.3"

[dev-dependencies]
rstest = "0.26"
